manifests/workload/mesh/multi-region/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-vs
  namespace: ha
spec:
  gateways:
  - istio-ingress/istio-ingress-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: whereami
        port:
          number: 80
